Adjusting resolution of assets of about section and experience section

--- a/src/css/about.css
+++ b/src/css/about.css
@@ -72,6 +72,10 @@
   .about-section {
     grid-template-columns: auto;
   }
+  .about-section .image-section{
+    width: inherit !important;
+    height: 500px !important;
+  }
 }
 @media (max-width: 965px) {
   .about-section {
