--- a/src/css/about.css
+++ b/src/css/about.css
@@ -37,7 +37,7 @@
   text-align: justify;
   text-align-last: center;
   padding: 20px 0 20px 0px;
-  font-size: 18px;
+  font-size: 20px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
 }
@@ -59,6 +59,9 @@
   .about-section .text-section p,
   .about-section .text-section h2 {
     padding: 30px 0 !important;
+  }
+  .about-section .text-section p {
+    font-size: 18px;
   }
   .about-section .image-section {
     text-align: center;
