Adding text orientation in skill and project section

--- a/src/css/project.css
+++ b/src/css/project.css
@@ -36,8 +36,8 @@
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   height: 150px;
-  text-align: justify;
-  text-align-last: center;
+  text-align: justify !important;
+  text-align-last: center !important;
 }
 .project-card .project-card-title {
   height: 50px;
@@ -112,5 +112,9 @@
   }
   .project-section {
     padding: 10px 20px;
+  }
+  .project-card .card-text {
+    text-align: justify !important;
+    text-align-last: center !important;
   }
 }
