--- a/src/css/project.css
+++ b/src/css/project.css
@@ -32,7 +32,7 @@
   width: 340px;
   margin-bottom: 50px;
 }
-.project-card .card-text {
+.project-card .card-text p{
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   height: 150px;
