Rectifying the alignment by assigning p part 2

--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -29,6 +29,8 @@
 }
 .skill-section .card-content p{
   font-family: "Roboto", sans-serif;
+  text-align: justify;
+  text-align-last: center;
   font-size: 18px;
 }
 .skill-section .card-body {
