--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -30,7 +30,7 @@
 .skill-section .card-content p{
   font-family: "Roboto", sans-serif;
   text-align: justify;
-  text-align-last: center;
+  text-align-last: right;
   font-size: 18px;
 }
 .skill-section .card-body {
