--- a/src/css/project.css
+++ b/src/css/project.css
@@ -37,7 +37,7 @@
   font-size: 18px;
   height: 150px;
   text-align: justify;
-  text-align-last: center;
+  text-align-last: right;
 }
 .project-card .project-card-title {
   height: 50px;
