--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -29,7 +29,7 @@
 }
 .skill-section .card-content p{
   font-family: "Roboto", sans-serif;
-  text-align: justify;
+  text-align: center;
   text-align-last: right;
   font-size: 18px;
 }
