--- a/src/css/project.css
+++ b/src/css/project.css
@@ -113,5 +113,8 @@
   .project-section {
     padding: 10px 20px;
   }
+  .project-card .card-text p{
+    text-align-last: center !important;
+  }
 
 }
