Adding adjustments in footer section spacing,centre aligned card texts and rectifying the nav toggle

--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -44,6 +44,7 @@
 }
 .experience-section .exp-cards .exp-card-header{
   font-family: "Space Mono", monospace;
+  font-size: 15px;
   height: 85px !important;
   display: flex;
   align-items: center;
