--- a/src/css/about.css
+++ b/src/css/about.css
@@ -39,7 +39,15 @@
   padding: 20px 0 20px 0px;
   font-size: 20px;
   font-family: "Roboto", sans-serif;
-  font-style: italic;
+  /* font-family: "Space Mono", monospace; */
+  /* font-family: "Abril Fatface", cursive; */
+  /* font-family: "Acme", sans-serif; */
+  /* font-family: "Amaranth", sans-serif; */
+  /* font-family: "Bree Serif", serif; */
+  /* font-family: "Courgette", cursive; */
+  /* font-family: "Secular One", sans-serif; */
+  /* font-family: "Viga", sans-serif; */
+  /* font-style: italic; */
 }
 .about-section .text-section .chip-class{
   /* padding-left: 50px; */
