--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -14,7 +14,13 @@
     border-radius: 15px;
     background-color: rgba(39, 92, 129, 0.096);
 }
-
+.contact-section .form-section h2{
+  font-family: 'Mirza', cursive;
+  text-align: center;
+  /* font-weight: 600; */
+  color: #97a0a8;
+  font-size: 45px;
+}
 @media (max-width: 1341px) {
    .contact-section{
     padding: 30px 150px;
