--- a/src/css/project.css
+++ b/src/css/project.css
@@ -36,7 +36,7 @@
   font-family: "Roboto", sans-serif;
   font-size: 18px;
   height: 150px;
-  text-align: justify;
+  text-align: center;
   text-align-last: center !important;
 }
 .project-card .project-card-title {
