Aligning contact button

--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -46,4 +46,8 @@
        
         
     }
+    .contact-section .makeStyles-root-3{
+      display: flex;
+      justify-content: center !important;
+  }
  }
