--- a/src/css/skill.css
+++ b/src/css/skill.css
@@ -29,6 +29,7 @@
 }
 .skill-section .card-content p{
   font-family: "Roboto", sans-serif;
+  font-family: "Short Stack", cursive;
   text-align: center;
   text-align-last: center !important;
   font-size: 18px;
