--- a/src/css/contact.css
+++ b/src/css/contact.css
@@ -1,4 +1,5 @@
 .contact-section {
+  font-family: "Short Stack", cursive;
   padding: 30px 200px;
   display: grid;
   grid-template-columns: 40% auto;
