--- a/src/css/education.css
+++ b/src/css/education.css
@@ -15,6 +15,14 @@ background-image: url("https://www.transparenttextures.com/patterns/cubes.png");
           font-size: 50px;
           margin-bottom: 50px;
 }
+.education-section h1{
+    font-family: 'Space Mono', monospace;
+    font-weight: bold;
+    font-size: 18px;
+}
+.education-section p{
+    font-family: "Short Stack", cursive;
+}
 .education-section a{
     word-break: break-all;
 }
