--- a/src/css/experience.css
+++ b/src/css/experience.css
@@ -23,6 +23,7 @@
 }
 .experience-section .exp-cards {
   font-family: "Roboto", sans-serif;
+  font-family: "Short Stack", cursive;
   margin-top: 30px;
   display: grid;
   font-size: 18px;
