--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,7 +1,9 @@
 /* .main-section{
     background-image: url("../assets/background-image/background.png");
 } */
-hr{
-    margin: 4px 0px;
-    background-color: rgb(229,230,249);
-}
+
+hr.sep-2 {
+    border: 0; 
+    height: 1px; 
+    background-image: linear-gradient(to right, #f0f0f0, #00b9ff, #59d941, #f0f0f0);
+  }
