--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,7 +3,14 @@
 } */
 
 hr.sep-2 {
-    border: 0; 
-    height: 1px; 
-    background-image: linear-gradient(to right, #f0f0f0, #00b9ff, #59d941, #f0f0f0);
-  }
+  margin: 0px;
+  border: 0;
+  height: 1px;
+  background-image: linear-gradient(
+    to right,
+    #f0f0f0,
+    #00b9ff,
+    #59d941,
+    #f0f0f0
+  );
+}
